fix: resolve build warnings